--- a/index.html
+++ b/index.html
@@ -10,3 +10,9 @@
 <header>
 <h1>Lauralai Jewelry</h1>
 </header>
+
+<section>
+  <img src="images/customjew.png" alt="custom jewelry">
+
+</body>
+</html>
