--- a/index.html
+++ b/index.html
@@ -11,6 +11,12 @@
 <h1>Lauralai Jewelry</h1>
 </header>
 
+<nav>
+  <a href="">Work</a><br>
+  <a href="">Photography</a><br>
+  <a href="">About me</a><br>
+</nav>
+
 <section>
   <img src="images/customjew.png" alt="custom jewelry">
 
