--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
 
 <section>
-  <img src="images/customjew.png" alt="custom jewelry">
+  <img src="customjew.png" alt="custom jewelry">
 
 </body>
 </html>
