--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <meta name="viewport" content="width=device-width, initial-scale=1">
-<title>Lauralai Jewelry</title>
+<title><img src="lauralai_logo.png" alt="lauralai logo"</title>
 <link rel="stylesheet" href="styles.css">
 </head>
 <body>
