--- a/index.html
+++ b/index.html
@@ -2,13 +2,13 @@
 <html>
 <head>
   <meta name="viewport" content="width=device-width, initial-scale=1">
-<title><img src="lauralai_logo.png" alt="lauralai logo"</title>
+<title>Lauralai Jewelry</title>
 <link rel="stylesheet" href="styles.css">
 </head>
 <body>
 
 <header>
-<h1>Lauralai Jewelry</h1>
+<h1><img src="lauralai_logo.png" alt="lauralai logo"</h1>
 </header>
 
 
