--- a/index.html
+++ b/index.html
@@ -11,11 +11,9 @@
 <h1><img src="lauralai_logo.png" alt="lauralai logo"</h1>
 </header>
 
-<nav>
-  <a href="">Collection</a><br>
-  <a href="">Where to Buy</a><br>
-  <a href="">Our Story</a><br>
-</nav>
+ <h2>Collection</h2>
+ <h2>Where to Buy</h2>
+ <h2>My Story</h2>
 
 
 <section>
