--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
   <h2>My Story</h2>
 
   div class="collection">
-  <h2><a href="1.jpg">IC2it</a></h2>
+  <h2><a href="1.jpg">Collection</a></h2>
 <img src="1.jpg" alt="" style="">
 </div>
 
