--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   <h2>Where to Buy</h2>
   <h2>My Story</h2>
 
-  div class="collection">
+  <div class="collection">
   <h2><a href="1.jpg">Collection</a></h2>
 <img src="1.jpg" alt="" style="">
 </div>
