--- a/index.html
+++ b/index.html
@@ -22,8 +22,12 @@
   <div class="collection">
   <h2><a href="5.jpg"></a></h2>
 <img src="5.jpg" alt="" style="">
+</div>
+<div class="collection">
 <h2><a href="16.jpg"></a></h2>
 <img src="16.jpg" alt="" style="">
+</div>
+<div class="collection">
 <h2><a href="21.jpg"></a></h2>
 <img src="21.jpg" alt="" style="">
 </div>
