--- a/index.html
+++ b/index.html
@@ -15,20 +15,11 @@
 <section>
   <img src="customjew.png" alt="custom jewelry">
 
+<h2>Collection</h2>
+<h2>Where to Buy</>
+<h2>My Story</>
 
 
-  <div class="collection">
-  <h2><a href="5.jpg"></a></h2>
-<img src="5.jpg" alt="" style="">
-</div>
-<div class="collection">
-<h2><a href="16.jpg"></a></h2>
-<img src="16.jpg" alt="" style="">
-</div>
-<div class="collection">
-<h2><a href="21.jpg"></a></h2>
-<img src="21.jpg" alt="" style="">
-</div>
 
 </body>
 </html>
