--- a/index.html
+++ b/index.html
@@ -15,9 +15,11 @@
 <section>
   <img src="customjew.png" alt="custom jewelry">
 
-<h2>Collection</h2>
-<h2>Where to Buy</>
-<h2>My Story</>
+  <nav>
+    <a href="collections.html">Collections</a><br>
+    <a href="wheretobuy.html">Where to Buy</a><br>
+    <a href="mystory.html">My Story</a><br>
+  </nav>
 
 
 
