--- a/index.html
+++ b/index.html
@@ -16,11 +16,9 @@
   <img src="customjew.png" alt="custom jewelry">
 
   <nav>
-    <ul>
-    <li><a href="collections.html">Collections</a><br>
-    <li><a href="wheretobuy.html">Where to Buy</a><br>
-    <li><a href="mystory.html">My Story</a><br>
-</ul>
+    <a href="collections.html">Collections</a><br>
+    <a href="wheretobuy.html">Where to Buy</a><br>
+    <a href="mystory.html">My Story</a><br>
   </nav>
 
 
