--- a/index.html
+++ b/index.html
@@ -16,9 +16,11 @@
   <img src="customjew.png" alt="custom jewelry">
 
   <nav>
-    <a href="collections.html">Collections</a><br>
-    <a href="wheretobuy.html">Where to Buy</a><br>
-    <a href="mystory.html">My Story</a><br>
+    <ul>
+    <li><a href="collections.html">Collections</a><br></li>
+    <li><a href="wheretobuy.html">Where to Buy</a><br></li>
+    <li><a href="mystory.html">My Story</a><br></li>
+  </ul>
   </nav>
 
 
