--- a/collections.html
+++ b/collections.html
@@ -12,11 +12,16 @@
 <h1><img src="lauralai_logo.png" alt="lauralai logo"</h1>
 </header>
 
-<div class="">
+<div class="Collections">
   <h2><a href="1.jpg"></a></h2>
 <img src="1.jpg" alt="" style="max-width:304px;height:228px;">
 </div>
 
+<ul>
+<li><a href="collections.html">Collections</a><br></li>
+<li><a href="wheretobuy.html">Where to Buy</a><br></li>
+<li><a href="mystory.html">My Story</a><br></li>
+</ul>
 
 </body>
 
