--- a/collections.html
+++ b/collections.html
@@ -16,12 +16,88 @@
   <h2><a href="1.jpg"></a></h2>
 <img src="1.jpg" alt="" style="max-width:304px;height:228px;">
 </div>
+<div class="Collections">
+  <h2><a href="3.jpg"></a></h2>
+<img src="2.jpg" alt="" style="max-width:304px;height:228px;">
+</div>
+<div class="Collections">
+  <h2><a href="3.jpg"></a></h2>
+<img src="3.jpg" alt="" style="max-width:304px;height:228px;">
+</div>
+<div class="Collections">
+  <h2><a href="4.jpg"></a></h2>
+<img src="4.jpg" alt="" style="max-width:304px;height:228px;">
+</div>
+<div class="Collections">
+  <h2><a href="5.jpg"></a></h2>
+<img src="5.jpg" alt="" style="max-width:304px;height:228px;">
+</div>
+<div class="Collections">
+  <h2><a href="6.jpg"></a></h2>
+<img src="6.jpg" alt="" style="max-width:304px;height:228px;">
+</div>
+<div class="Collections">
+  <h2><a href="7.jpg"></a></h2>
+<img src="7.jpg" alt="" style="max-width:304px;height:228px;">
+</div>
+<div class="Collections">
+  <h2><a href="8.jpg"></a></h2>
+<img src="8.jpg" alt="" style="max-width:304px;height:228px;">
+</div>
+<div class="Collections">
+  <h2><a href="9.jpg"></a></h2>
+<img src="9.jpg" alt="" style="max-width:304px;height:228px;">
+</div>
+<div class="Collections">
+  <h2><a href="10.jpg"></a></h2>
+<img src="10.jpg" alt="" style="max-width:304px;height:228px;">
+</div>
+<div class="Collections">
+  <h2><a href="11.jpg"></a></h2>
+<img src="11.jpg" alt="" style="max-width:304px;height:228px;">
+</div>
+<div class="Collections">
+  <h2><a href="12.jpg"></a></h2>
+<img src="12.jpg" alt="" style="max-width:304px;height:228px;">
+</div>
+<div class="Collections">
+  <h2><a href="14.jpg"></a></h2>
+<img src="14.jpg" alt="" style="max-width:304px;height:228px;">
+</div>
+<div class="Collections">
+  <h2><a href="15.jpg"></a></h2>
+<img src="15.jpg" alt="" style="max-width:304px;height:228px;">
+</div><div class="Collections">
+  <h2><a href="16.jpg"></a></h2>
+<img src="16.jpg" alt="" style="max-width:304px;height:228px;">
+</div>
+<div class="Collections">
+  <h2><a href="17.jpg"></a></h2>
+<img src="17.jpg" alt="" style="max-width:304px;height:228px;">
+</div>
+<div class="Collections">
+  <h2><a href="18.jpg"></a></h2>
+<img src="18.jpg" alt="" style="max-width:304px;height:228px;">
+</div>
+<div class="Collections">
+  <h2><a href="19.jpg"></a></h2>
+<img src="19.jpg" alt="" style="max-width:304px;height:228px;">
+</div>
+<div class="Collections">
+  <h2><a href="20.jpg"></a></h2>
+<img src="20.jpg" alt="" style="max-width:304px;height:228px;">
+</div>
+<div class="Collections">
+  <h2><a href="21.jpg"></a></h2>
+<img src="21.jpg" alt="" style="max-width:304px;height:228px;">
+</div>
 
 <ul>
 <li><a href="collections.html">Collections</a><br></li>
 <li><a href="wheretobuy.html">Where to Buy</a><br></li>
 <li><a href="mystory.html">My Story</a><br></li>
 </ul>
+
 
 </body>
 
