--- a/collections.html
+++ b/collections.html
@@ -81,15 +81,15 @@
 </div>
 <div class="Collections">
   <h2><a href="19.jpg"></a></h2>
-<img src="19.jpg" alt="" style="max-width:304px;height:228px;">
+<img src="19.jpg" alt="" style="">
 </div>
 <div class="Collections">
   <h2><a href="20.jpg"></a></h2>
-<img src="20.jpg" alt="" style="max-width:304px;height:228px;">
+<img src="20.jpg" alt="" style="">
 </div>
 <div class="Collections">
   <h2><a href="21.jpg"></a></h2>
-<img src="21.jpg" alt="" style="max-width:304px;height:228px;">
+<img src="21.jpg" alt="" style="">
 </div>
 
 <ul>
