--- a/collections.html
+++ b/collections.html
@@ -94,6 +94,7 @@
 </div>
 
 <ul>
+  <li><a href="index.html">Home</a><br></li>
 <li><a href="collections.html">Collections</a><br></li>
 <li><a href="wheretobuy.html">Where to Buy</a><br></li>
 <li><a href="mystory.html">My Story</a><br></li>
