--- a/wheretobuy.html
+++ b/wheretobuy.html
@@ -13,6 +13,7 @@
 
 
 <ul>
+  <li><a href="index.html">Home</a><br></li>
 <li><a href="collections.html">Collections</a><br></li>
 <li><a href="wheretobuy.html">Where to Buy</a><br></li>
 <li><a href="mystory.html">My Story</a><br></li>
