--- a/wheretobuy.html
+++ b/wheretobuy.html
@@ -11,9 +11,10 @@
 <h1><img src="lauralai_logo.png" alt="lauralai logo"</h1>
 </header>
 
+<h2>Coming Soon!!!</h2>
 
 <ul>
-  <li><a href="index.html">Home</a><br></li>
+<li><a href="index.html">Home</a><br></li>
 <li><a href="collections.html">Collections</a><br></li>
 <li><a href="wheretobuy.html">Where to Buy</a><br></li>
 <li><a href="mystory.html">My Story</a><br></li>
