--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <section>
   <img src="customjew.png" alt="custom jewelry">
 
-
+</section>
     <ul>
     <li><a href="collections.html">Collections</a><br></li>
     <li><a href="wheretobuy.html">Where to Buy</a><br></li>
