--- a/collections.html
+++ b/collections.html
@@ -80,13 +80,14 @@
 <img src="21.jpg" alt="" style="">
 </div>
 
+<section>
 <ul>
   <li><a href="index.html">Home</a><br></li>
 <li><a href="collections.html">Collections</a><br></li>
 <li><a href="wheretobuy.html">Where to Buy</a><br></li>
 <li><a href="mystory.html">My Story</a><br></li>
 </ul>
-
+</section>
 
 </body>
 
