--- a/wheretobuy.html
+++ b/wheretobuy.html
@@ -12,13 +12,13 @@
 </header>
 
 <h2>Coming Soon!!!</h2>
-
+<section>
 <ul>
 <li><a href="index.html">Home</a><br></li>
 <li><a href="collections.html">Collections</a><br></li>
 <li><a href="wheretobuy.html">Where to Buy</a><br></li>
 <li><a href="mystory.html">My Story</a><br></li>
 </ul>
-
+</section>
 </body>
 </html>
