--- a/wheretobuy.html
+++ b/wheretobuy.html
@@ -9,16 +9,22 @@
 
 <header>
 <h1><img src="lauralai_logo.png" alt="lauralai logo"</h1>
-</header>
-
-<h2>Coming Soon!!!</h2>
-<section>
 <ul>
 <li><a href="index.html">Home</a><br></li>
 <li><a href="collections.html">Collections</a><br></li>
 <li><a href="wheretobuy.html">Where to Buy</a><br></li>
 <li><a href="mystory.html">My Story</a><br></li>
 </ul>
-</section>
+</header>
+
+<h2>Coming Soon!!!</h2>
+
+<ul>
+<li><a href="index.html">Home</a><br></li>
+<li><a href="collections.html">Collections</a><br></li>
+<li><a href="wheretobuy.html">Where to Buy</a><br></li>
+<li><a href="mystory.html">My Story</a><br></li>
+</ul>
+
 </body>
 </html>
