--- a/collections.html
+++ b/collections.html
@@ -79,15 +79,14 @@
   <h2><a href="21.jpg"></a></h2>
 <img src="21.jpg" alt="" style="">
 </div>
-
-<section>
+<div class="Collections">
 <ul>
   <li><a href="index.html">Home</a><br></li>
 <li><a href="collections.html">Collections</a><br></li>
 <li><a href="wheretobuy.html">Where to Buy</a><br></li>
 <li><a href="mystory.html">My Story</a><br></li>
 </ul>
-</section>
+</div>
 
 </body>
 
