--- a/mystory.html
+++ b/mystory.html
@@ -19,5 +19,15 @@
 <li><a href="mystory.html">My Story</a><br></li>
 </ul>
 
+
+<p>Hi, my name is Laura Maushard and it has always been my passion to create
+  jewelry for family and friends. Now I want to expand beyond the local area
+  and reach people from all around the world. I am a wife and mom of one child
+  and work full time at the local hospital. One day I would like to take that
+  leap and create jewelry pieces full time. I truly enjoy making others happy
+  and one way of doing that is by creating jewelry that shows their inner
+  beauty. Thank you for stopping by to check out just a few of my pieces I have
+  available. I create my own pieces but I also build to order as well.
+</p>
 </body>
 </html>
