--- a/wheretobuy.html
+++ b/wheretobuy.html
@@ -11,7 +11,7 @@
 <h1><img src="lauralai_logo.png" alt="lauralai logo"</h1>
 </header>
 
-<h2>Coming Soon!!!</h2>
+<pComing Soon!!!</p>
 
 <ul>
 <li><a href="index.html">Home</a><br></li>
