--- a/collections.html
+++ b/collections.html
@@ -41,7 +41,7 @@
 </div>
 <div class="Collections">
   <h2><a href="9.jpg"></a></h2>
-<img src="9.jpg" alt="" style="">
+<img src="9.jpg" onmouseover= "this.src='9.jpg'" onmouseout=this.src='9.jpg'" alt="" style="">
 </div>
 <div class="Collections">
   <h2><a href="10.jpg"></a></h2>
