--- a/collections.html
+++ b/collections.html
@@ -41,7 +41,7 @@
 </div>
 <div class="Collections">
   <h2><a href="9.jpg"></a></h2>
-<img src="9.jpg" onmouseover= "img.src='9.jpg'" onmouseout=img.src='9.jpg'" alt="" style="max-width=500; max-height=500">
+<img src="9.jpg" alt="" style="">
 </div>
 <div class="Collections">
   <h2><a href="10.jpg"></a></h2>
